--- a/data/contact/contact_response.yml
+++ b/data/contact/contact_response.yml
@@ -552,3 +552,142 @@ responses:
     - text: "I didn't catch that. Could you rephrase or ask me for available options?"
     - text: "I'm having trouble processing that request. Could you try again differently?"
     - text: "I'm not following what you want. For assistance, try saying 'help'."
+
+  # Out of scope responses
+  utter_out_of_scope:
+    - text: "I'm not sure I understand that request. Let's focus on adding your contact. What would you like to do next?"
+    - text: "That's outside what I can help with right now. Would you like to continue adding a contact?"
+    - text: "I'm designed to help with your cryptocurrency wallet contacts. Could we continue with that process?"
+    - text: "I don't have the capability to handle that request. Let's get back to adding your contact."
+    - text: "I'm sorry, but I'm specialized in managing your crypto wallet contacts. Shall we continue with that?"
+    - text: "That's beyond my current abilities. I'm here to help you add contacts to your crypto wallet."
+    - text: "I can't help with that, but I'm ready to assist with adding contacts to your wallet."
+    - text: "I'm not programmed to handle that request. Would you like to continue adding a contact to your wallet?"
+    - text: "That's not something I can assist with. Let's focus on completing your contact addition."
+    - text: "I'm specialized in crypto wallet management. Can we continue adding your contact?"
+    - text: "I don't understand that request, but I'm happy to continue helping you add a contact."
+    - text: "That's outside my scope, but I'm here to help you manage your cryptocurrency contacts."
+    - text: "I'm not equipped to handle that query. Let's get back to adding your contact."
+    - text: "That request is beyond what I can help with. Would you like to continue with the contact addition?"
+    - text: "I'm designed specifically for crypto wallet management. Shall we continue adding your contact?"
+    - text: "I can't process that request. Let's focus on completing your contact addition process."
+    - text: "That's not within my capabilities. I'm here to help you add contacts to your wallet."
+    - text: "I don't have the knowledge to help with that. Would you like to continue adding your cryptocurrency contact?"
+    - text: "I'm specialized in managing wallet contacts. Can we return to that task?"
+    - text: "I'm not able to help with that specific request. Let's continue with adding your contact."
+    
+  # Greeting responses
+  utter_greet:
+    - text: "Hello! Welcome to your cryptocurrency wallet. How can I assist you today?"
+    - text: "Hi there! I'm your crypto wallet assistant. What would you like to do?"
+    - text: "Welcome! I'm here to help manage your cryptocurrency contacts and transactions."
+    - text: "Greetings! Your crypto wallet assistant is at your service."
+    - text: "Hello! Ready to help with your cryptocurrency needs today."
+    - text: "Hi! Welcome to your digital wallet assistant. How may I help you?"
+    - text: "Good day! I'm your wallet assistant. What can I do for you?"
+    - text: "Welcome back! How can I assist with your crypto wallet today?"
+    - text: "Hello there! Your crypto wallet assistant is ready to help."
+    - text: "Hi! I'm here to manage your cryptocurrency contacts and transactions. What would you like to do?"
+    - text: "Welcome to your crypto wallet! How can I make your experience better today?"
+    - text: "Greetings! I'm your personal wallet assistant. What would you like to manage today?"
+    - text: "Hello! I'm here to make managing your crypto wallet easier. How can I help?"
+    - text: "Hi there! Ready to assist with your cryptocurrency needs whenever you are."
+    - text: "Welcome aboard! Your crypto wallet assistant is at your command."
+    - text: "Hello! I'm your crypto assistant. What would you like to accomplish today?"
+    - text: "Hey there! Ready to help you manage your digital assets. What's on your mind?"
+    - text: "Welcome to your personal crypto manager! How can I assist you today?"
+    - text: "Hi! I'm your wallet's virtual assistant. What crypto tasks can I help with?"
+    - text: "Greetings! Your digital asset assistant is online and ready to help."
+    
+  # Multiple networks confirmation
+  utter_confirm_multiple_networks:
+    - text: "I noticed you mentioned multiple cryptocurrency networks. Which network would you like to use for this contact?"
+    - text: "You've specified several networks. Could you tell me which one you'd like to use for this contact?"
+    - text: "I see multiple networks in your request. Which specific network should I associate with this contact?"
+    - text: "You've mentioned several crypto networks. Which one should I use for this contact's address?"
+    - text: "I detected multiple networks in your message. Please specify which one to use for this contact."
+    - text: "It seems you want to add multiple networks. For now, which network should we start with?"
+    - text: "I can only add one network at a time. Which network would you like to add first?"
+    - text: "Multiple networks detected. Please tell me which network to prioritize for this contact."
+    - text: "You've mentioned multiple cryptocurrencies. Which network should I use for this contact entry?"
+    - text: "I noticed more than one network in your request. Which should be the primary network for this contact?"
+    - text: "You've specified several tokens. Please indicate which network you'd like to use first."
+    - text: "Multiple crypto networks detected. Which one would you like to associate with this contact?"
+    - text: "I can see you've mentioned several networks. Which one is the primary network for this contact?"
+    - text: "You've listed multiple cryptocurrencies. Which network should I prioritize for this contact entry?"
+    - text: "I've detected several networks in your message. Please specify which one to use for this contact."
+    - text: "Multiple networks mentioned. Which one would you like to add for this contact first?"
+    - text: "I see you're interested in multiple networks. Which one should we start with for this contact?"
+    - text: "You've mentioned several blockchain networks. Which one should I use for this contact's address?"
+    - text: "I've identified multiple networks in your request. Which one do you want to use primarily?"
+    - text: "It looks like you're interested in adding multiple networks. Let's start with one - which would you prefer?"
+    
+  # Handle different intent
+  utter_handle_different_intent:
+    - text: "I'll help you with that request first. Would you like to continue adding the contact afterward?"
+    - text: "I'll address that question before we continue. Would you like to resume adding the contact later?"
+    - text: "Let me help you with this new request. We can return to adding your contact when you're ready."
+    - text: "I understand you want to do something else now. We can save your progress and return to it later."
+    - text: "I'll take care of this first. Just let me know when you want to continue adding the contact."
+    - text: "Let me handle that for you. Would you like to continue with contact addition afterward?"
+    - text: "I'll switch to addressing this request. Your contact addition progress has been saved."
+    - text: "I understand you need something else. We can come back to adding the contact when you're ready."
+    - text: "Let me help you with that first. Your contact addition process can be resumed anytime."
+    - text: "I'll assist with this new request. Just say 'continue' when you're ready to resume adding your contact."
+    - text: "I'll take care of this matter. Your contact addition progress is saved for when you want to continue."
+    - text: "I understand your priorities have changed. Let me help with this, and we can return to the contact later."
+    - text: "I'll address this now. When you're ready, we can pick up where we left off with adding the contact."
+    - text: "Let me switch gears to help with this. Your contact information is saved for later completion."
+    - text: "I'll assist with that first. Would you like to return to adding the contact after we're done?"
+    - text: "I can certainly help with that instead. The contact addition process is paused and can be resumed."
+    - text: "Let me handle this request first. Your progress on adding a contact is saved."
+    - text: "I understand you want to switch topics. We can return to adding your contact whenever you're ready."
+    - text: "I'll focus on this request now. Just let me know when you want to return to adding your contact."
+    - text: "I'll take care of this now. Your contact addition is on hold and can be resumed at any time."
+    
+  # Contact validation help
+  utter_contact_validation_help:
+    - text: "Let me help you with the wallet address validation. Addresses need to match the specific format for each cryptocurrency network."
+    - text: "You seem to be having trouble with the wallet address. Each network has a specific format - Bitcoin addresses typically start with 1, 3, or bc1, while Ethereum addresses start with 0x."
+    - text: "I'm having trouble validating this address. Double-check for typos and ensure it's the correct address type for the selected network."
+    - text: "Wallet addresses are specific to each network. For example, Bitcoin addresses are usually 26-35 characters long, while Ethereum addresses are 42 characters starting with 0x."
+    - text: "Let me explain wallet address formats: Bitcoin addresses typically look like '1A1zP1...', Ethereum addresses start with '0x...', and Litecoin addresses often begin with 'L'."
+    - text: "Address validation is failing. Ensure you're copying the entire address and that it's for the correct network you selected."
+    - text: "Having trouble with the wallet address? Each cryptocurrency has a unique address format. Make sure the address matches the network you've selected."
+    - text: "For validation to succeed, ensure the address is complete and corresponds to the selected cryptocurrency network."
+    - text: "Address validation issues are common. Double-check that you've selected the correct network for this address, as formats vary significantly."
+    - text: "The wallet address format doesn't seem to match the selected network. Would you like me to show you examples of valid addresses for this network?"
+    - text: "Let me help with address validation. Bitcoin addresses are case-sensitive and usually 34 characters long. Ethereum addresses are 42 characters starting with 0x."
+    - text: "Validation errors often happen with wallet addresses. Try copying the address directly from the source to avoid any character mistakes."
+    - text: "Each blockchain has unique address formats. I can verify Bitcoin, Ethereum, Litecoin, Ripple, and many other networks. Make sure your address matches the selected network."
+    - text: "Addresses must precisely match their network's format. Would you like me to verify this address on the blockchain explorer?"
+    - text: "Struggling with the address validation? Cryptocurrency addresses need to be exact - every character matters. Try copying from the source again."
+    - text: "The validation is failing because the address format doesn't match what's expected for this network. Would you like examples of valid addresses?"
+    - text: "For successful validation, ensure the address is complete without any spaces or extra characters, and matches the specified cryptocurrency network."
+    - text: "Wallet address validation is crucial for security. Make sure you're using the right address type for the selected network."
+    - text: "I can help validate this address. Different networks use different formats, checksums, and character sets. Let's make sure this address matches your selected network."
+    - text: "Address validation protects your assets. Let's double-check that this address is valid for the cryptocurrency network you've specified."
+    
+  # Contact addition help
+  utter_contact_addition_help:
+    - text: "Adding a contact requires three pieces of information: the contact's name, the cryptocurrency network they use, and their wallet address."
+    - text: "I need to collect a name for your contact, the cryptocurrency network they use (like Bitcoin or Ethereum), and their complete wallet address."
+    - text: "To add a new contact, I'll ask for their name, which cryptocurrency they use, and their full wallet address for that cryptocurrency."
+    - text: "The contact addition process is simple: provide a name, select the cryptocurrency network, and enter their wallet address."
+    - text: "Adding contacts makes transfers easier. I just need their name, cryptocurrency network, and wallet address to complete the process."
+    - text: "I'm here to help you add a contact. You'll need to provide their name, the cryptocurrency they use, and their wallet address for that cryptocurrency."
+    - text: "Contact addition requires three steps: naming the contact, specifying the cryptocurrency network, and entering their correct wallet address."
+    - text: "To add a contact, I need to know what you'd like to call them, which cryptocurrency network they use, and their full wallet address."
+    - text: "The contact addition process helps you save addresses for frequent transfers. I'll need a name, network choice, and the wallet address."
+    - text: "Adding a contact to your wallet is straightforward. Just provide a name, specify the cryptocurrency network, and enter their wallet address."
+    - text: "I'm guiding you through adding a contact. I'll need to collect their name, preferred cryptocurrency, and their wallet address."
+    - text: "To add someone to your contacts, I need three pieces of information: their name, the cryptocurrency network, and their full wallet address."
+    - text: "Contact addition makes future transactions easier. I just need to know what to call them, which cryptocurrency they use, and their wallet address."
+    - text: "I'm helping you add a contact to your wallet. This requires their name, the cryptocurrency network, and their complete wallet address."
+    - text: "The process for adding a contact is: 1) Provide a name for the contact, 2) Specify the cryptocurrency, and 3) Enter their wallet address."
+    - text: "Adding a contact to your cryptocurrency wallet requires a name, network selection, and their full wallet address."
+    - text: "To complete the contact addition, I need a name for this contact, their cryptocurrency network, and their correct wallet address."
+    - text: "I'm helping you add a contact to simplify future transfers. I'll need their name, cryptocurrency type, and wallet address."
+    - text: "Contact addition is a three-step process: naming the contact, selecting their cryptocurrency, and entering their wallet address."
+    - text: "To successfully add this contact, I'll guide you through providing their name, cryptocurrency network, and full wallet address."
+  
